# FalconGateway

./: .dockerignore  .gitignore  CMakeLists.txt  DEV_SUMMARY.md  Dockerfile  README.md  TEST_SKILL.md  config.json.example  main.cpp
.github/workflows/: ci.yml  release.yml
include/: config_loader.h  flow_controller.h  gateway.h  md_handler.h  order_manager.h  position_manager.h  ring_buffer.h  trader_handler.h  types.h
logger/: CMakeLists.txt
logger/include/: logger.h
logger/src/: logger.cpp
src/: config_loader.cpp  gateway.cpp  md_handler.cpp  order_manager.cpp  position_manager.cpp  trader_handler.cpp
